--- a/TugasAkhir/alatMusik.html
+++ b/TugasAkhir/alatMusik.html
@@ -38,6 +38,10 @@
         <img src="assets/alatMusik/terompet.png" alt="Angklung" class="instrument" onclick="playSound('assets/alatMusik/sound/terompet.opus')">
         <p class="image-name">Terompet</p>
       </div>      
+      <div class="image-wrapper" onmouseover="playHoverSound()">
+        <img src="assets/alatMusik/terompet.png" alt="Angklung" class="instrument" onclick="playSound('assets/alatMusik/sound/terompet.opus')">
+        <p class="image-name">Terompet</p>
+      </div>      
     </div>
   </div>
   <button class="bottom-left" onclick="window.location.href='Home.html'">Home</button>
