ini test kalau ada error

--- a/TugasAkhir/alatMusik.html
+++ b/TugasAkhir/alatMusik.html
@@ -39,9 +39,9 @@
         <p class="image-name">Terompet</p>
       </div>      
       <div class="image-wrapper" onmouseover="playHoverSound()">
-        <img src="assets/alatMusik/terompet.png" alt="Angklung" class="instrument" onclick="playSound('assets/alatMusik/sound/terompet.opus')">
-        <p class="image-name">Terompet</p>
-      </div>      
+        <img src="assets/alatMusik/suling.png" alt="Angklung" class="instrument" onclick="playSound('assets/alatMusik/sound/suling.opus')">
+        <p class="image-name">Suling</p>
+      </div>
     </div>
   </div>
   <button class="bottom-left" onclick="window.location.href='Home.html'">Home</button>
